--- a/sections/00_title-page.tex
+++ b/sections/00_title-page.tex
@@ -21,7 +21,7 @@
    \vspace{1cm}
    {\Large Samuel Oliver Bryson} \\
    \vspace{0.5cm}
-   {\large XX.05.2020} \\}
+   {\large 30.05.2020} \\}
 
    \vspace{3.5cm}
    \large{\textit{Betreuung}} \vspace{0.5cm} \\
