--- a/sections/01_erklaerung.tex
+++ b/sections/01_erklaerung.tex
@@ -5,7 +5,7 @@ Hiermit erkl\"are ich, Samuel Oliver Bryson (geboren am 21.12.1991 in Nottingham
 \vspace{2cm}
 
 \begin{flushright}
-	Berlin, den XX.XX.XXX \hspace{1cm} \underline{\hspace{7cm}}
+	Berlin, den 30.05.2020 \hspace{1cm} \underline{\hspace{7cm}}
 
 	Samuel Oliver Bryson \hspace{1.5cm} \par
 \end{flushright}
