--- a/sections/02_intro.tex
+++ b/sections/02_intro.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
-In recent years, many industries have experienced enormous changes due to an influx of huge quantities of data, increasingly affordable data storage solutions and access to high computational power \cite[]{chen_big_2014}. The aviation industry is no exception: the Airbus A350 XWB comes equipped with approximately \numprint{6000} sensors that produce 300 GB of data every day; the next generation Airbus A380 will come with \numprint{10000} sensors on a single wing alone \cite[]{rajaraman_big_2016}.
+In recent years, many industries have experienced enormous changes due to an influx of huge quantities of data, increasingly affordable data storage solutions and access to high computational power \cite[]{chen_big_2014}. The aviation industry is no exception: the Airbus A350 XWB comes equipped with approximately \numprint{6000} sensors that produce \mbox{300 GB} of data every day; the next generation Airbus A380 will come with \numprint{10000} sensors on a single wing alone \cite[]{rajaraman_big_2016}.
 
 This data can only be of value if there are suitable tools for handling it. The arrival of the age of Big Data \cite[]{fan_mining_2013} coincided unsurprisingly with an increase in the popularity of \ac{ai} and \ac{ml}. Today, highly optimised, specially designed programming libraries make data-orientated \ac{ml} approaches more accessible and more powerful than ever.
 
@@ -7,6 +7,6 @@ Operators using aircraft powered by engines made by Rolls-Royce can return \ac{e
 
 Rolls-Royce uses this data for various analyses, such as determining the amount of service life consumed during the flight mission. Currently, the process involves hand-selecting individual points of interest (features) of a component, and performing a semi-automated fatigue analysis on each of these individually, from which the consumed service life is determined. This method has been sufficient in the past due to its robustness and efficiency for a small number of features, but is limited by the difficulties and time involved in selecting features a priori.
 
-This thesis, written in cooperation with Rolls-Royce Deutschland, aims to identify, evaluate and compare a number of \ac{ml}-based methods that avoid this manual input stage by producing an output for \textit{all} component surface nodes with comparable accuracy and speed to the current method.
+This thesis, completed using data kindly provided by Rolls-Royce Deutschland, aims to identify, evaluate and compare a number of \ac{ml}-based methods that avoid or minimise this manual input stage by producing an output for \textit{all} component surface nodes with comparable accuracy and speed to the current method.
 
-The thesis is structured as follows: First, the theoretical background will be covered alongside an introduction to subfields of \ac{ml} and \ac{dl} and state-of-the-art methods of interest for the research. Then, an overview of the input data will be presented. After this, the methods identified will be implemented and their results presented in the practical section, with a subsequent evaluation and comparison in the discussion. Finally, in the conclusion, suggestions will be made for further research into the topic.
+The thesis is structured as follows: First, the theoretical background will be covered alongside an introduction to subfields of \ac{ml} and \ac{dl} and state-of-the-art methods of interest for the research. Then, an overview of the input data will be presented. After this, the methods identified will be implemented, followed by the presentation and comparison of their results in the discussion. Finally, in the conclusion, the research will be evaluated and suggestions will be made for further research into the topic.
