--- a/sections/08_thanks.tex
+++ b/sections/08_thanks.tex
@@ -1,1 +1,4 @@
-\chapter{Acknowledgements}
+\chapter*{Acknowledgements}
+I would like to express sincere appreciation to my supervisors at Rolls-Royce Deutschland, Dr. Stephan Pannier and Tolga Ya\u{g}c\i{}, M.Sc., who have spent countless hours with me to share their expertise and ideas, and to help me find my place in the world of engineering.
+
+My deepest gratitude is extended to my fianc\'ee, Destina Sevde Ay, for her endless patience and support.
