--- a/sections/abbrv.tex
+++ b/sections/abbrv.tex
@@ -118,6 +118,12 @@
 	class	=	Machine learning
 }
 
+\DeclareAcronym{pr}{
+	short	=	PR,
+	long	=	polynomial regression,
+	class	=	Machine learning
+}
+
 \DeclareAcronym{tsc}{
 	short	=	TSC,
 	long	=	Time series classification,
