--- a/sections/preamble.tex
+++ b/sections/preamble.tex
@@ -24,4 +24,5 @@
 \usepackage{multirow}
 \usepackage{siunitx}
 \usepackage{pdfpages}
+\usepackage{listings}
 \usepackage[headsepline,nouppercase,automark]{scrpage2}
