--- a/sty/layout.tex
+++ b/sty/layout.tex
@@ -29,8 +29,8 @@
 
 \clearscrplain
 \setkomafont{pagenumber}{\small}
-\setkomafont{pageheadfoot}{\small}
-\cfoot[\pagemark]{}
+% \setkomafont{pageheadfoot}{\small}
+% \cfoot[\pagemark]{}
 \pagestyle{scrheadings}
 
 \geometry{
@@ -66,7 +66,9 @@
 \setkomafont{caption}{\linespread{1.0}\selectfont \small}
 \setcapindent{1em}
 
-\newcommand{\tmatter}{\frontmatter\pagenumbering{roman}}
-\newcommand{\fmatter}{\pagenumbering{Roman}}
-\newcommand{\mmatter}{\mainmatter}
-\newcommand{\bmatter}{\backmatter}
+% \newcommand{\tmatter}{\frontmatter\pagenumbering{roman}}
+% \newcommand{\fmatter}{\pagenumbering{Roman}}
+% \newcommand{\mmatter}{\mainmatter}
+% \newcommand{\bmatter}{\backmatter}
+
+% \renewcommand\pagemark{{\usekomafont{pagenumber}\thepage}}
